2016-12-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_end_line): For some index commands
	(e.g., @defcv), do not record the text of the index entry in
	order to avoid needing to call Texinfo::Report::gdt, which
	would be difficult to do in the XS rewrite.  Store
	the current document language for the index entry.

	* tp/Texinfo/Structuring.pm (do_index_keys): Fill in the text
	of the index entries where missing.  Account for the $self 
	argument being either a Texinfo::Parser object or a converter 
	object.

	* tp/Texinfo/Parser.pm, tp/Texinfo/Structuring.pm 
	(_non_bracketed_contents): Move function to Structuring.pm.

2016-12-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (merge_indices): Remove some 
	commented-out statements for debugging.

2016-12-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XSLoader.pm,
	* tp/Texinfo/Convert/Paragraph.pm: Move check for UTF-8 locale 
	into Paragraph.pm, and allow it to pass strings into XSLoader.pm 
	to print messages for debugging purposes.

2016-12-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XSLoader.pm: New file.
	* tp/Texinfo/Convert/Paragraph.pm: Move all the code into 
	XSLoader.pm.  This is intended to allow the code for loading XS 
	modules to be shared among multiple modules.

2016-12-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/terminal.c (terminal_switch_rendition): If turning off 
	either foreground or background colour, call 
	'terminal_default_colour' and reinstate any remaining foreground 
	or background colour afterwards.  This fixes a bug where 
	foreground colour might not be turned on again if background 
	colour was turned off.

2016-12-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert): Remove extra blank 
	line inserted after a menu that has been created.

2016-12-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi): Call 'labels_information' 